--- a/package.json
+++ b/package.json
@@ -79,8 +79,7 @@
 	"dependencies": {
 		"clsx": "^2.1.1",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"react-facebook-login": "^4.1.1"
+		"react-dom": "^18.2.0"
 	},
 	"lint-staged": {
 		"*.{css,scss}": "npm run stylelint:fix",
